BGMとボタン周りの変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- JavaScript の読み込み -->
   <script src="miku.js"></script><br>
   <!-- 音量制御 -->
-  <audio src="issenkounen.mp3" autoplay loop>音楽を再生できません。ニコニコで聞いてね。</audio>
-  <input type="button" class="volume">
+  <audio id="bgm" src="issenkounen.mp3" controls loop>音楽を再生できません。ニコニコで聞いてね。</audio> <!-- あとでautoに変える -->
+  <button id="volume"></button>
 </body>
 </html>
