--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <!-- 描画場所の確保 -->
   <canvas id="canvas" width="640" height="360"></canvas>
-  <!-- JavaScript の読み込み -->
-  <script src="miku.js"></script><br>
+  <!-- メインJSの読み込み -->
+  <script src="miku.js"></script>
   <!-- 音量制御 -->
   <audio id="bgm" src="issenkounen.mp3" controls loop>音楽を再生できません。ニコニコで聞いてね。</audio> <!-- あとでautoに変える -->
   <button id="volume"></button>
+  <script src="button.js"></script><br>
 </body>
 </html>
