メインJSの書き込み

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 描画場所の確保 -->
   <canvas id="canvas" width="640" height="360"></canvas>
   <!-- メインJSの読み込み -->
-  <script src="miku.js"></script>
+  <script src="miku.js"></script><br>
   <!-- 音量制御 -->
   <audio id="bgm" src="issenkounen.mp3" controls loop>音楽を再生できません。ニコニコで聞いてね。</audio> <!-- あとでautoに変える -->
   <button id="volume"></button>
