変更の保存

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="miku.js"></script><br>
   <!-- 音量制御 -->
   <audio id="bgm" src="issenkounen.mp3" controls loop>音楽を再生できません。ニコニコで聞いてね。</audio> <!-- あとでautoに変える -->
-  <button id="volume"></button>
+  <button id="volume" class="volume-on"></button>
   <script src="button.js"></script><br>
 </body>
 </html>
