クレジットの追加

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <audio id="bgm" src="issenkounen.mp3" controls loop>音楽を再生できません。ニコニコで聞いてね。</audio> <!-- あとでautoに変える -->
   <button id="volume" class="volume-on"></button>
   <script src="button.js"></script><br>
+  <p>元動画 : 一千光年 / いよわ  <a href="https://youtu.be/uB_jQ8H2Yeg?si=Sn0lsbQ_cVA6nWTz" target="_blank">YouTube</a>/<a href="https://www.nicovideo.jp/watch/sm41951611" target="_blank">ニコニコ</a></p>
 </body>
 </html>
 
